--- a/FoodGo/foodgo/package.json
+++ b/FoodGo/foodgo/package.json
@@ -9,7 +9,6 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -38,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "daisyui": "^4.12.14"
+    "daisyui": "^4.12.14",
+    "react-router-dom": "^6.27.0"
   }
 }
